# sonic-sairedis

./: .artifactignore  .clang-format  .gitignore  .gitmodules  CODE_REVIEW_NOTES.md  Makefile.am  README.md  azsyslog.conf  azure-pipelines.yml  configure.ac  dummy_test_file.txt  gcov_support.sh  lgtm.yml  stub.pl
asicdump/: Makefile.am
debian/: control  (+7 more)
lib/: Channel.cpp  Channel.h  ClientConfig.cpp  ClientConfig.h  ClientOtai.cpp  ClientOtai.h  ClientSai.cpp  ClientSai.h  ClientServerOtai.cpp  ClientServerOtai.h  ClientServerSai.cpp  ClientServerSai.h  Context.cpp  Context.h  ContextConfig.cpp  ContextConfig.h  ContextConfigContainer.cpp  Makefile.am  OidIndexGenerator.h  Otai.cpp  Otai.h  Recorder.cpp  Recorder.h  RedisChannel.cpp  RedisChannel.h  RedisRemoteOtaiInterface.cpp  RedisRemoteOtaiInterface.h  RedisRemoteSaiInterface.cpp  RedisRemoteSaiInterface.h  RedisVidIndexGenerator.cpp  RedisVidIndexGenerator.h  RemoteOtaiInterface.h  Sai.cpp  Sai.h  ServerConfig.cpp  ServerConfig.h  ServerOtai.cpp  ServerOtai.h  ServerSai.cpp  ServerSai.h  (+29 more)
lib/inc/: Channel.h  ClientSai.h  ClientServerSai.h  Globals.h  Recorder.h  RedisRemoteSaiInterface.h  Sai.h  SaiInterface.h  ServerSai.h  ZeroMQChannel.h  sai_redis.h  sai_redis_internal.h  sairedis.h
lib/src/: Channel.cpp  ClientSai.cpp  ClientServerSai.cpp  ContextConfigContainer.cpp  Makefile.am  Recorder.cpp  RedisChannel.cpp  RedisRemoteSaiInterface.cpp  Sai.cpp  SaiInterface.cpp  ServerSai.cpp  ZeroMQChannel.cpp  context_config.json  sai_redis_acl.cpp  sai_redis_bridge.cpp  sai_redis_buffer.cpp  sai_redis_dtel.cpp  sai_redis_fdb.cpp  sai_redis_generic_create.cpp  sai_redis_generic_get.cpp  sai_redis_generic_get_stats.cpp  sai_redis_generic_remove.cpp  sai_redis_generic_set.cpp  sai_redis_hash.cpp  sai_redis_hostintf.cpp  sai_redis_interfacequery.cpp  sai_redis_mirror.cpp  sai_redis_nexthopgroup.cpp  sai_redis_notifications.cpp  sai_redis_policer.cpp  sai_redis_port.cpp  sai_redis_qosmaps.cpp  sai_redis_queue.cpp  sai_redis_record.cpp  sai_redis_route.cpp  sai_redis_scheduler.cpp  sai_redis_schedulergroup.cpp  sai_redis_stp.cpp  sai_redis_switch.cpp  sai_redis_tunnel.cpp  (+4 more)
meta/: AttrKeyMap.cpp  AttrKeyMap.h  DashMeta.cpp  DashMeta.h  DummyOtaiInterface.cpp  DummyOtaiInterface.h  DummySaiInterface.cpp  DummySaiInterface.h  Globals.cpp  Globals.h  Makefile.am  Meta.cpp  Meta.h  MetaKeyHasher.cpp  MetaKeyHasher.h  Notification.cpp  Notification.h  NotificationBfdSessionStateChange.h  NotificationFactory.cpp  NotificationHaScopeEvent.cpp  NotificationNatEvent.cpp  NotificationPortHostTxReadyEvent.cpp  NotificationPortHostTxReadyEvent.h  NotificationSwitchMacsecPostStatus.cpp  NumberOidIndexGenerator.cpp  NumberOidIndexGenerator.h  OidRefCounter.cpp  OidRefCounter.h  OtaiAttrWrapper.cpp  OtaiAttributeList.cpp  OtaiInterface.cpp  OtaiInterface.h  OtaiObject.cpp  OtaiObjectCollection.cpp  OtaiObjectCollection.h  OtaiSerialize.cpp  PerformanceIntervalTimer.cpp  PortRelatedSet.cpp  RedisSelectableChannel.cpp  RedisSelectableChannel.h  (+27 more)
proxylib/: Makefile.am  Options.cpp  Proxy.cpp  Proxy.h  Sai.cpp  Sai.h  sai_proxy.cpp  sai_proxy.h  sai_proxy_dash_eni.cpp  sai_proxy_interfacequery.cpp
saisdkdump/: Makefile.am  ProfileMap.cpp  ProfileMap.h  saisdkdump.cpp
stub/: Makefile.am  sai_stub.h  sai_stub_acl.cpp  sai_stub_ars.cpp  sai_stub_ars_profile.cpp  sai_stub_bfd.cpp  sai_stub_bmtor.cpp  sai_stub_bridge.cpp  sai_stub_buffer.cpp  sai_stub_counter.cpp  sai_stub_dash_acl.cpp  sai_stub_dash_direction_lookup.cpp  sai_stub_dash_eni.cpp  sai_stub_dash_inbound_routing.cpp  sai_stub_dash_meter.cpp  sai_stub_dash_outbound_ca_to_pa.cpp  sai_stub_dash_outbound_routing.cpp  sai_stub_dash_pa_validation.cpp  sai_stub_dash_vip.cpp  sai_stub_dash_vnet.cpp  sai_stub_debug_counter.cpp  sai_stub_dtel.cpp  sai_stub_fdb.cpp  sai_stub_genericprogrammable.cpp  sai_stub_hash.cpp  sai_stub_hostif.cpp  sai_stub_interfacequery.cpp  sai_stub_ipmc.cpp  sai_stub_ipmc_group.cpp  sai_stub_ipsec.cpp  sai_stub_isolation_group.cpp  sai_stub_l2mc.cpp  sai_stub_l2mcgroup.cpp  sai_stub_lag.cpp  sai_stub_macsec.cpp  sai_stub_mcastfdb.cpp  sai_stub_mirror.cpp  sai_stub_mpls.cpp  sai_stub_my_mac.cpp  sai_stub_nat.cpp  (+27 more)
syncd/: AdvancedRestartTable.cpp  AdvancedRestartTable.h  Asan.cpp  AsicOperation.cpp  AsicOperation.h  AsicView.cpp  AsicView.h  BaseRedisClient.h  BestCandidateFinder.cpp  BestCandidateFinder.h  BreakConfig.cpp  BreakConfig.h  CommandLineOptions.cpp  CommandLineOptions.h  CommandLineOptionsParser.cpp  ComparisonLogic.cpp  ComparisonLogic.h  ConcurrentQueue.h  DBConnector.cpp  DBConnector.h  DampingStats.h  DisabledRedisClient.cpp  DisabledRedisClient.h  EventThrottle.cpp  EventThrottle.h  FdbEntryKeyHasher.cpp  FdbEntryKeyHasher.h  FlexCounter.cpp  FlexCounter.h  FlexCounterManager.cpp  FlexCounterManager.h  GlobalSwitchId.cpp  GlobalSwitchId.h  HardReiniter.cpp  HardReiniter.h  Ipc.cpp  Ipc.h  LinkEventDamping.h  Makefile.am  Mdio.cpp  (+90 more)
syncd/pai_inc/: brcm_pai_cfg.h  brcm_pai_common.h  brcm_pai_db.h  brcm_pai_extensions.h  brcm_pai_list.h  brcm_pai_log.h  brcm_pai_port.h  brcm_pai_prop.h  brcm_pai_switch.h  brcm_pai_wb.h  epdm.h  epdm_base_t_sec.h  epdm_bcm_base_t_common_sec_defines.h  epdm_bcm_common_defines.h  epdm_bcm_common_sec_defines.h  epdm_custom_config.h  epdm_sec.h
syncd/scripts/: brcm_common_config_ut.sh  gbsyncdmgrd  physyncd_init_common.sh  physyncd_start.sh  poesyncdmgrd  saidump.sh  syncd_healthcheck.sh  syncd_init_common.sh  syncd_start.sh
syncd/tests/: Makefile.am  TestDisabledRedisClient.cpp  TestRedisClientDisabled.cpp  TestSyncdBrcm.cpp  TestSyncdLinkEventDamping.cpp  TestSyncdMlnx.cpp  TestSyncdNvdaBf.cpp  TestSyncdNvdaBf.h  TestZmqRedisClient.cpp
unittest/saisdkdump/: Makefile.am  TestProfileMap.cpp
unittest/stub/: Makefile.am  main.cpp  test_sai_stub_acl.cpp  test_sai_stub_ars.cpp  test_sai_stub_ars_profile.cpp  test_sai_stub_bfd.cpp  test_sai_stub_bmtor.cpp  test_sai_stub_bridge.cpp  test_sai_stub_buffer.cpp  test_sai_stub_counter.cpp  test_sai_stub_dash_acl.cpp  test_sai_stub_dash_direction_lookup.cpp  test_sai_stub_dash_eni.cpp  (+48 more)
(+1428 files in other folders)
